feat: update startup script